fixed some annoying white gaps

--- a/magic/src/app/card-detail/card-detail.component.css
+++ b/magic/src/app/card-detail/card-detail.component.css
@@ -4,11 +4,12 @@
 
     border-radius: 3px;
     border: 3px solid black;
-    /*box-shadow: 1px 1px 1px #000;*/
+    /*box-shadow: 1px 1px 0px #888;*/
     background-color: black;
 }
 
+
 .card-art {
    width: 100%;
-
+   display: block;
 }
