--- a/magic/src/app/decklist/decklist.component.css
+++ b/magic/src/app/decklist/decklist.component.css
@@ -13,5 +13,6 @@ font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-shadow: 2px 2px 5px black;
   background:white;
   margin:0 auto 15px;
+  background-color: black;
 
 }
